# cookiecutter-bc

./: .flake8  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
