[tool.poetry]
name = "cookiecutter-bc"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gian.lepear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    | .venv
    | .vscode
)
'''

[tool.isort]
profile = "black"
