[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{ cookiecutter.project_version }}"
description =  "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = ">= 22.3.0, < 23.0.0"
isort = ">= 5.10.1, < 6.0.0"
flake8 = ">= 5.0.3, < 6.0.0"
pre-commit = ">= 2.20.0, < 3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    | .venv
    | .vscode
)
'''

[tool.isort]
profile = "black"
